--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
-          <img src="" alt="Картинка из блока места" class="place__image"></img>
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка из блока места"></img>
           <div class="place__website">
             <p class="place__website_url-heading">URL</p>
             <a href="#" class="place__website_link">park-kosa.ru</a>
@@ -76,7 +76,7 @@
         </div>
         <div class="place">
           <h2 class="place__title">Кольский</h2>
-          <img src="" alt="Картинка из блока места" class="place__image"></img>
+          <img src="./images/place-kolsky.jpg" alt="Картинка из блока места" class="place__image"></img>
           <div class="place__website">
             <p class="place__website_url-heading">URL</p>
             <a href="#" class="place__website_link">National Geographic</a>
@@ -92,7 +92,7 @@
         </div>
         <div class="place">
           <h2 class="place__title">Алтай</h2>
-          <img src="" alt="Картинка из блока места" class="place__image"></img>
+          <img src="./images/place-altai.jpg" alt="Картинка из блока места" class="place__image"></img>
           <div class="place__website">
             <p class="place__website_url-heading">URL</p>
             <a href="#" class="place__website_link">YouTube</a>
@@ -107,7 +107,7 @@
         </div>
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
-          <img src="" alt="Картинка из блока места" class="place__image"></img>
+          <img src="./images/place-winter-baikal.jpg" alt="Картинка из блока места" class="place__image"></img>
           <div class="place__website">
             <p class="place__website_url-heading">URL</p>
             <a href="#" class="place__website_link">https://vk.com/baikalmile</a>
@@ -122,7 +122,7 @@
         </div>
         <div class="place">
           <h2 class="place__title">Карелия</h2>
-          <img src="" alt="Картинка из блока места" class="place__image"></img>
+          <img src="./images/place-karelia.jpg" alt="Картинка из блока места" class="place__image"></img>
           <div class="place__website">
             <p class="place__website_url-heading">URL</p>
             <a href="#" class="place__website_link">http://vodlozero.ru/</a>
