--- a/index.html
+++ b/index.html
@@ -135,8 +135,16 @@
             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
       </div>
+      <div class="cover">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.</p>
+        <img src="./images/cover-trains.jpg" alt="Картинка поезда" class="cover__backgroung">
+        <div class="cover__overlay"></div>
+      </div>
+  </div>
 
-    </main>
+  </main>
   </div>
 </body>
 
