--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <div class="page">
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Лого">
-      <div class="links">
-        <a href="#" class="links__lang-link">Ru</a>
-        <a href="#" class="links__lang-link">En</a>
+      <div class="header__links">
+        <a href="#" class="header__lang-link">Ru</a>
+        <a href="#" class="header__lang-link">En</a>
       </div>
     </header>
     <main class="content">
@@ -25,9 +25,9 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="./images/lead-polka.jpg" alt="Картинка полка" class="lead__image">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>
       </div>
-      <div class="1">
+
         <div class="intro">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
@@ -38,14 +38,14 @@
             смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
             километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
           <ul class="intro__list">
-            <li>Часовых поясов 11</li>
-            <li>Объектов природного наследия ЮНЕСКО 12</li>
-            <li> Объектов культурного наследия ЮНЕСКО 16</li>
-            <li>Природных заповедников 105</li>
+            <li>Часовых поясов <span class="numbers">11</span></li>
+            <li>Объектов природного наследия ЮНЕСКО <span class="numbers">12</span></li>
+            <li> Объектов культурного наследия ЮНЕСКО <span class="numbers">16</span></li>
+            <li>Природных заповедников <span class="numbers">105</span></li>
             <li>Аэропортов 241</li>
           </ul>
         </div>
-      </div>
+
       <div class="photo-grid">
         <img src="./images/photo-grid-train.jpg" alt="Картинка из сетки" class="photo-grid__item">
         <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Картинка из сетки" class="photo-grid__item">
@@ -63,11 +63,12 @@
       <div class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
-          <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка из блока места"></img>
           <div class="place__website">
             <p class="place__website_url-heading">URL</p>
             <a href="#" class="place__website_link">park-kosa.ru</a>
           </div>
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка из блока места"></img>
+
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
             природная зона на краю российского анклава.</p>
@@ -78,11 +79,12 @@
         </div>
         <div class="place">
           <h2 class="place__title">Кольский</h2>
-          <img src="./images/place-kolsky.jpg" alt="Картинка из блока места" class="place__image"></img>
           <div class="place__website">
             <p class="place__website_url-heading">URL</p>
             <a href="#" class="place__website_link">National Geographic</a>
           </div>
+          <img src="./images/place-kolsky.jpg" alt="Картинка из блока места" class="place__image"></img>
+
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
             юг —
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -94,11 +96,12 @@
         </div>
         <div class="place">
           <h2 class="place__title">Алтай</h2>
-          <img src="./images/place-altai.jpg" alt="Картинка из блока места" class="place__image"></img>
           <div class="place__website">
             <p class="place__website_url-heading">URL</p>
             <a href="#" class="place__website_link">YouTube</a>
           </div>
+          <img src="./images/place-altai.jpg" alt="Картинка из блока места" class="place__image"></img>
+
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
             озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
@@ -109,11 +112,12 @@
         </div>
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
-          <img src="./images/place-winter-baikal.jpg" alt="Картинка из блока места" class="place__image"></img>
           <div class="place__website">
             <p class="place__website_url-heading">URL</p>
             <a href="#" class="place__website_link">https://vk.com/baikalmile</a>
           </div>
+          <img src="./images/place-winter-baikal.jpg" alt="Картинка из блока места" class="place__image"></img>
+
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
@@ -124,11 +128,12 @@
         </div>
         <div class="place">
           <h2 class="place__title">Карелия</h2>
-          <img src="./images/place-karelia.jpg" alt="Картинка из блока места" class="place__image"></img>
           <div class="place__website">
             <p class="place__website_url-heading">URL</p>
             <a href="#" class="place__website_link">http://vodlozero.ru/</a>
           </div>
+          <img src="./images/place-karelia.jpg" alt="Картинка из блока места" class="place__image"></img>
+
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
@@ -145,7 +150,7 @@
         <div class="cover__overlay"></div>
       </div>
       <footer class="footer">
-        <div class="links">
+        <div class="footer__links">
           <a href="#" class="footer__link">Карты</a>
           <a href="#" class="footer__link">Погода</a>
           <a href="#" class="footer__link">Расписание</a>
