--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
             километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
           <ul class="intro__list">
-            <li>Часовых поясов <span class="numbers">11</span></li>
-            <li>Объектов природного наследия ЮНЕСКО <span class="numbers">12</span></li>
-            <li> Объектов культурного наследия ЮНЕСКО <span class="numbers">16</span></li>
-            <li>Природных заповедников <span class="numbers">105</span></li>
-            <li>Аэропортов 241</li>
+            <li>Часовых поясов <span class="intro__numbers">11</span></li>
+            <li>Объектов природного наследия ЮНЕСКО <span class="intro__numbers">12</span></li>
+            <li> Объектов культурного наследия ЮНЕСКО <span class="intro__numbers">16</span></li>
+            <li>Природных заповедников <span class="intro__numbers">105</span></li>
+            <li>Аэропортов <span class="intro__numbers">241</span></li>
           </ul>
         </div>
 
