--- a/index.html
+++ b/index.html
@@ -13,40 +13,38 @@
 
 <body>
   <div class="page">
-    <header class="header">
-      <img class="header__logo" src="./images/header-logo.svg" alt="Лого">
-      <div class="header__links">
-        <a href="#" class="header__lang-link">Ru</a>
-        <a href="#" class="header__lang-link">En</a>
-      </div>
-    </header>
     <main class="content">
-      <div class="lead">
+      <header class="header">
+        <img class="header__logo" src="./images/header-logo.svg" alt="Лого">
+        <div class="header__links">
+          <a href="#" class="header__lang-link">Ru</a>
+          <a href="#" class="header__lang-link">En</a>
+        </div>
+      </header>
+      <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="./images/lead-polka.jpg" alt="Картинка полка" class="lead__image">
-        <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>
-      </div>
-
-        <div class="intro">
-          <h2 class="intro__title">Чего мы там не видели?</h2>
-          <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-            вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
-            красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
-            —
-            смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-            километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-          <ul class="intro__list">
-            <li>Часовых поясов <span class="intro__numbers">11</span></li>
-            <li>Объектов природного наследия ЮНЕСКО <span class="intro__numbers">12</span></li>
-            <li> Объектов культурного наследия ЮНЕСКО <span class="intro__numbers">16</span></li>
-            <li>Природных заповедников <span class="intro__numbers">105</span></li>
-            <li>Аэропортов <span class="intro__numbers">241</span></li>
-          </ul>
-        </div>
-
-      <div class="photo-grid">
+        <p class="lead__caption">ваша полка — верхняя</p>
+      </section>
+      <section class="intro">
+        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+          вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
+          красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
+          —
+          смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
+          километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <ul class="intro__list">
+          <li>Часовых поясов <span class="intro__numbers">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__numbers">12</span></li>
+          <li> Объектов культурного наследия ЮНЕСКО <span class="intro__numbers">16</span></li>
+          <li>Природных заповедников <span class="intro__numbers">105</span></li>
+          <li>Аэропортов <span class="intro__numbers">241</span></li>
+        </ul>
+      </section>
+      <section class="photo-grid">
         <img src="./images/photo-grid-train.jpg" alt="Картинка из сетки" class="photo-grid__item">
         <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Картинка из сетки" class="photo-grid__item">
         <img src="./images/photo-grid-tuman.jpg" alt="Картинка из сетки" class="photo-grid__item">
@@ -59,16 +57,15 @@
         <img src="./images/photo-grid-kamchatka-2.jpg" alt="Картинка из сетки" class="photo-grid__item">
         <img src="./images/photo-grid-baikal-2.jpg" alt="Картинка из сетки" class="photo-grid__item">
         <img src="./images/photo-grid-ergaki.jpg" alt="Картинка из сетки" class="photo-grid__item">
-      </div>
-      <div class="places">
+      </section>
+      <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
-          <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="#" class="place__website_link">park-kosa.ru</a>
+          <div class="website">
+            <p class="website__url-heading">URL</p>
+            <a href="http://park-kosa.ru" class="website__link" target="_blank" rel="noopener">park-kosa.ru</a>
           </div>
-          <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка из блока места"></img>
-
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка из блока места">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
             природная зона на краю российского анклава.</p>
@@ -79,12 +76,12 @@
         </div>
         <div class="place">
           <h2 class="place__title">Кольский</h2>
-          <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="#" class="place__website_link">National Geographic</a>
+          <div class="website">
+            <p class="website__url-heading">URL</p>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="website__link"
+              target="_blank" rel="noopener">National Geographic</a>
           </div>
-          <img src="./images/place-kolsky.jpg" alt="Картинка из блока места" class="place__image"></img>
-
+          <img src="./images/place-kolsky.jpg" alt="Картинка из блока места" class="place__image">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
             юг —
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -96,12 +93,12 @@
         </div>
         <div class="place">
           <h2 class="place__title">Алтай</h2>
-          <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="#" class="place__website_link">YouTube</a>
+          <div class="website">
+            <p class="website__url-heading">URL</p>
+            <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="website__link" target="_blank"
+              rel="noopener">YouTube</a>
           </div>
-          <img src="./images/place-altai.jpg" alt="Картинка из блока места" class="place__image"></img>
-
+          <img src="./images/place-altai.jpg" alt="Картинка из блока места" class="place__image">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
             озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
@@ -112,12 +109,12 @@
         </div>
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
-          <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="#" class="place__website_link">https://vk.com/baikalmile</a>
+          <div class="website">
+            <p class="website__url-heading">URL</p>
+            <a href="https://vk.com/baikalmile" class="website__link" target="_blank"
+              rel="noopener">https://vk.com/baikalmile</a>
           </div>
-          <img src="./images/place-winter-baikal.jpg" alt="Картинка из блока места" class="place__image"></img>
-
+          <img src="./images/place-winter-baikal.jpg" alt="Картинка из блока места" class="place__image">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
@@ -128,12 +125,11 @@
         </div>
         <div class="place">
           <h2 class="place__title">Карелия</h2>
-          <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="#" class="place__website_link">http://vodlozero.ru/</a>
+          <div class="website">
+            <p class="website__url-heading">URL</p>
+            <a href="http://vodlozero.ru" class="website__link" target="_blank" rel="noopener">http://vodlozero.ru/</a>
           </div>
-          <img src="./images/place-karelia.jpg" alt="Картинка из блока места" class="place__image"></img>
-
+          <img src="./images/place-karelia.jpg" alt="Картинка из блока места" class="place__image">
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
@@ -141,27 +137,26 @@
             В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
-      </div>
-      <div class="cover">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-          электричках.</p>
-        <img src="./images/cover-trains.jpg" alt="Картинка поезда" class="cover__backgroung">
-        <div class="cover__overlay"></div>
-      </div>
+      </section>
+      <section class="cover">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank" rel="noopener">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.</p>
+          <!--<img src="./images/cover-trains.jpg" alt="Картинка поезда" class="cover__backgroung">-->
+        </a>
+      </section>
       <footer class="footer">
         <div class="footer__links">
-          <a href="#" class="footer__link">Карты</a>
-          <a href="#" class="footer__link">Погода</a>
-          <a href="#" class="footer__link">Расписание</a>
-          <a href="#" class="footer__link">Календарь</a>
-          <a href="#" class="footer__link">Путешествия</a>
+          <a href="https://yandex.ru/maps" class="footer__link" target="_blank" rel="noopener">Карты</a>
+          <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank" rel="noopener">Погода</a>
+          <a href="https://rasp.yandex.ru" class="footer__link" target="_blank" rel="noopener">Расписание</a>
+          <a href="https://calendar.yandex.ru" class="footer__link" target="_blank" rel="noopener">Календарь</a>
+          <a href="https://travel.yandex.ru" class="footer__link" target="_blank" rel="noopener">Путешествия</a>
         </div>
         <div class="footer__copyright">© 2023. Недосейкин Денис</div>
       </footer>
-  </div>
-
-  </main>
+    </main>
   </div>
 </body>
 
