--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <div class="page">
     <main class="content">
       <header class="header">
-        <img class="header__logo" src="./images/header-logo.svg" alt="Лого">
+        <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
         <div class="header__links">
-          <a href="#" class="header__lang-link">Ru</a>
+          <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
           <a href="#" class="header__lang-link">En</a>
         </div>
       </header>
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img src="./images/lead-polka.jpg" alt="Картинка полка" class="lead__image">
+        <img src="./images/lead-polka.jpg" alt="Вид из окна" class="lead__image">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
       <section class="intro">
@@ -45,18 +45,18 @@
         </ul>
       </section>
       <section class="photo-grid">
-        <img src="./images/photo-grid-train.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-tuman.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-sochi.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-arisa.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-baikal.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-elbrus.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-kondratiev.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-1.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-2.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-baikal-2.jpg" alt="Картинка из сетки" class="photo-grid__item">
-        <img src="./images/photo-grid-ergaki.jpg" alt="Картинка из сетки" class="photo-grid__item">
+        <img src="./images/photo-grid-train.jpg" alt="Вид из окна" class="photo-grid__item">
+        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на горы" class="photo-grid__item">
+        <img src="./images/photo-grid-tuman.jpg" alt="Волк" class="photo-grid__item">
+        <img src="./images/photo-grid-sochi.jpg" alt="Тайга" class="photo-grid__item">
+        <img src="./images/photo-grid-arisa.jpg" alt="Машина на льду" class="photo-grid__item">
+        <img src="./images/photo-grid-baikal.jpg" alt="Пляж" class="photo-grid__item">
+        <img src="./images/photo-grid-elbrus.jpg" alt="Горы" class="photo-grid__item">
+        <img src="./images/photo-grid-kondratiev.jpg" alt="Буйки" class="photo-grid__item">
+        <img src="./images/photo-grid-kamchatka-1.jpg" alt="Вид на горы" class="photo-grid__item">
+        <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на горы" class="photo-grid__item">
+        <img src="./images/photo-grid-baikal-2.jpg" alt="Вид на горы" class="photo-grid__item">
+        <img src="./images/photo-grid-ergaki.jpg" alt="Вид на горы" class="photo-grid__item">
       </section>
       <section class="places">
         <div class="place">
@@ -65,7 +65,7 @@
             <p class="website__url-heading">URL</p>
             <a href="http://park-kosa.ru" class="website__link" target="_blank" rel="noopener">park-kosa.ru</a>
           </div>
-          <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка из блока места">
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
             природная зона на краю российского анклава.</p>
@@ -81,7 +81,7 @@
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="website__link"
               target="_blank" rel="noopener">National Geographic</a>
           </div>
-          <img src="./images/place-kolsky.jpg" alt="Картинка из блока места" class="place__image">
+          <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
             юг —
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -98,7 +98,7 @@
             <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="website__link" target="_blank"
               rel="noopener">YouTube</a>
           </div>
-          <img src="./images/place-altai.jpg" alt="Картинка из блока места" class="place__image">
+          <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
             озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
@@ -114,11 +114,11 @@
             <a href="https://vk.com/baikalmile" class="website__link" target="_blank"
               rel="noopener">https://vk.com/baikalmile</a>
           </div>
-          <img src="./images/place-winter-baikal.jpg" alt="Картинка из блока места" class="place__image">
+          <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
-          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для&nbsp;соревнований по
             скийорингу. Это такой вид спорта, когда лыжник привязывает себя
             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
             «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
@@ -129,7 +129,7 @@
             <p class="website__url-heading">URL</p>
             <a href="http://vodlozero.ru" class="website__link" target="_blank" rel="noopener">http://vodlozero.ru/</a>
           </div>
-          <img src="./images/place-karelia.jpg" alt="Картинка из блока места" class="place__image">
+          <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
@@ -140,7 +140,7 @@
       </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank" rel="noopener">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.</p>
           <!--<img src="./images/cover-trains.jpg" alt="Картинка поезда" class="cover__backgroung">-->
