--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
-<body>
+<body class="root">
   <div class="page">
+    <header class="header">
+      <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
+      <div class="header__links">
+        <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+        <a href="#" class="header__lang-link">En</a>
+      </div>
+    </header>
     <main class="content">
-      <header class="header">
-        <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
-        <div class="header__links">
-          <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
-          <a href="#" class="header__lang-link">En</a>
-        </div>
-      </header>
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img src="./images/lead-polka.jpg" alt="Вид из окна" class="lead__image">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <figure class="lead__figure">
+          <img src="./images/lead-polka.jpg" alt="Вид из окна" class="lead__image">
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -142,6 +144,7 @@
             <a href="http://vodlozero.ru" class="website__link" target="_blank" rel="noopener">http://vodlozero.ru/</a>
           </div>
           <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
+          <div class="place__paragraphs">
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
@@ -149,26 +152,26 @@
             В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
+        </div>
       </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank" rel="noopener">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.</p>
-          <!--<img src="./images/cover-trains.jpg" alt="Картинка поезда" class="cover__backgroung">-->
-        </a>
+          </a>
       </section>
-      <footer class="footer">
-        <div class="footer__links">
-          <a href="https://yandex.ru/maps" class="footer__link" target="_blank" rel="noopener">Карты</a>
-          <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank" rel="noopener">Погода</a>
-          <a href="https://rasp.yandex.ru" class="footer__link" target="_blank" rel="noopener">Расписание</a>
-          <a href="https://calendar.yandex.ru" class="footer__link" target="_blank" rel="noopener">Календарь</a>
-          <a href="https://travel.yandex.ru" class="footer__link" target="_blank" rel="noopener">Путешествия</a>
-        </div>
-        <div class="footer__copyright">© 2023. Недосейкин Денис</div>
-      </footer>
     </main>
+    <footer class="footer">
+      <div class="footer__links">
+        <a href="https://yandex.ru/maps" class="footer__link" target="_blank" rel="noopener">Карты</a>
+        <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank" rel="noopener">Погода</a>
+        <a href="https://rasp.yandex.ru" class="footer__link" target="_blank" rel="noopener">Расписание</a>
+        <a href="https://calendar.yandex.ru" class="footer__link" target="_blank" rel="noopener">Календарь</a>
+        <a href="https://travel.yandex.ru" class="footer__link" target="_blank" rel="noopener">Путешествия</a>
+      </div>
+      <div class="footer__copiryght">© 2023. Недосейкин Денис</div>
+    </footer>
   </div>
 </body>
 
