--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
       <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
-          <div class="website">
-            <p class="website__url-heading">URL</p>
-            <a href="http://park-kosa.ru" class="website__link" target="_blank" rel="noopener">park-kosa.ru</a>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a href="http://park-kosa.ru" class="place__link" target="_blank" rel="noopener">park-kosa.ru</a>
           </div>
           <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
           <div class="place__paragraphs">
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
               спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
               природная зона на краю российского анклава.</p>
-            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника и
               исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
               россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
               и
@@ -81,9 +81,9 @@
         </div>
         <div class="place">
           <h2 class="place__title">Кольский</h2>
-          <div class="website">
-            <p class="website__url-heading">URL</p>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="website__link"
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link"
               target="_blank" rel="noopener">National Geographic</a>
           </div>
           <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
@@ -101,9 +101,9 @@
         </div>
         <div class="place">
           <h2 class="place__title">Алтай</h2>
-          <div class="website">
-            <p class="website__url-heading">URL</p>
-            <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="website__link" target="_blank"
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link" target="_blank"
               rel="noopener">YouTube</a>
           </div>
           <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
@@ -120,9 +120,9 @@
         </div>
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
-          <div class="website">
-            <p class="website__url-heading">URL</p>
-            <a href="https://vk.com/baikalmile" class="website__link" target="_blank"
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a href="https://vk.com/baikalmile" class="place__link" target="_blank"
               rel="noopener">https://vk.com/baikalmile</a>
           </div>
           <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
@@ -139,9 +139,9 @@
         </div>
         <div class="place">
           <h2 class="place__title">Карелия</h2>
-          <div class="website">
-            <p class="website__url-heading">URL</p>
-            <a href="http://vodlozero.ru" class="website__link" target="_blank" rel="noopener">http://vodlozero.ru/</a>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a href="http://vodlozero.ru" class="place__link" target="_blank" rel="noopener">http://vodlozero.ru/</a>
           </div>
           <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
           <div class="place__paragraphs">
