--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
           </div>
           <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
           <div class="place__paragraphs">
-          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
-            лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
-            национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
-            полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-        </div>
+            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+              лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+              национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+              полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+              В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+              в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+          </div>
         </div>
       </section>
       <section class="cover">
@@ -159,18 +159,18 @@
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.</p>
-          </a>
+        </a>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__links">
+      <nav class="footer__links">
         <a href="https://yandex.ru/maps" class="footer__link" target="_blank" rel="noopener">Карты</a>
         <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank" rel="noopener">Погода</a>
         <a href="https://rasp.yandex.ru" class="footer__link" target="_blank" rel="noopener">Расписание</a>
         <a href="https://calendar.yandex.ru" class="footer__link" target="_blank" rel="noopener">Календарь</a>
         <a href="https://travel.yandex.ru" class="footer__link" target="_blank" rel="noopener">Путешествия</a>
-      </div>
-      <div class="footer__copiryght">© 2023. Недосейкин Денис</div>
+      </nav>
+      <p class="footer__copiryght">© 2023. Недосейкин Денис</p>
     </footer>
   </div>
 </body>
