--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Первый проект Дениса Недосейкина на Яндекс Практикуме">
+  <meta name="description" content="Третий проект Дениса Недосейкина на Яндекс Практикуме">
   <meta name="keywords" content="html, css, javascript">
   <meta name="author" content="Денис Недосейкин">
   <title>Путешествия по России: адаптивная вёрстка</title>
